fixed spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,8 +177,8 @@ body {
     color: darkred;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 100%;
+  text-overflow: hidden;
+  width: 230px;
   display: block;
 }
 
